@@ -1,3 +1,9 @@
+2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>
+
+	bug #34768 Proposition: Change the name of the AVR32 devices
+	* avrdude.conf.in: renamed ucr2 to uc3a0512
+	* avrpart.c: added cast to avoid compiler warning
+
 2012-02-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* fileio.c (fileio_elf): Fix a copy'n-paste-o.
